// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches a single location's rooms 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "locations": [
        {
          "id": 1,
          "properties": {
            "name": "Location 1",
          },
          "rooms": [
            {
              "created_at": 2023-01-01T00:00:00.000Z,
              "created_id": 1,
              "locationId": 1,
              "name": "L1 Room 1",
              "roomId": 1,
            },
            {
              "created_at": 2023-01-01T00:00:00.000Z,
              "created_id": 1,
              "locationId": 1,
              "name": "L1 Room 2",
              "roomId": 2,
            },
            {
              "created_at": 2023-01-01T00:00:00.000Z,
              "created_id": 1,
              "locationId": 1,
              "name": "L1 Room 3",
              "roomId": 3,
            },
          ],
        },
      ],
    },
    "errors": undefined,
  },
}
`;

exports[`fetches a single location, no rooms 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "locations": [
        {
          "geometry": {
            "coordinates": [
              30,
              40.32908,
            ],
          },
          "id": 1,
          "properties": {
            "feature_type": "poi",
            "full_address": "123 Main St, AnyTown, StateProv, H0H0H0, Any Nation",
            "name": "Location 1",
          },
          "type": "Feature",
        },
      ],
    },
    "errors": undefined,
  },
}
`;
